Modify: some methods, all tests, todo logging